Fix footer visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,9 +106,9 @@ main {
     height: 600px;
     width: 100%;
     color: white;
-    position: absolute;
+    position: sticky;
     top: 720px;
-    z-index: 2;
+    z-index: 1;
   }
   
   #strength-heading {
@@ -136,6 +136,7 @@ main {
     font-size: 160%;
     padding: 5%;
     color: white;
+    z-index: 2;
 }
 
 /* Responsivity - Media Queries */
